# lib/models/voip-carrier.js
@@ -195,6 +195,10 @@ VoipCarrier.fields = [
   {
     name: 'sip_proxy',
     type: 'string'
+  },
+  {
+    name: 'register_expires',
+    type: 'number'
   }
 ];
 
